@@ -1,4 +1,4 @@
 DIST maven-error-diagnostics-2.1_pre20070611.tar.bz2 7053 RMD160 152ca2b44f4a10f068693cb5a2f4546f6b78cd13 SHA1 15114421f595b753b46b41527d30a182b305fc51 SHA256 1735312db178ac2076a0e3f20de82fa66ee19d7487d225c2486ac2a5c2d01527
-EBUILD maven-error-diagnostics-2.1_pre20070611.ebuild 671 RMD160 b8cff4d3132df31887140cc8cea11e173cc60939 SHA1 24a0b2f575e191a8e3b6a73b9cf300a295227291 SHA256 1b4aae5546ef463d86f3204300f4625340b4a2b3e952f35ef26b1db4e467ca26
-MISC ChangeLog 777 RMD160 10a6401d5247a98698cb31fb3a176bcf1f940c3d SHA1 2d6b447052b187566be0e7fd8e3f98a62c466542 SHA256 d3fc121c691cdcd57baa0b1636a309ebb806c23a193142b69d3559d7e038648b
+EBUILD maven-error-diagnostics-2.1_pre20070611.ebuild 747 RMD160 250e1788039edc54449837cb401d0a47089e0ea8 SHA1 fd255fa90333d805c7cb2d2ed60f1cda2317f367 SHA256 b38745ac010fe434fe23f98f2414fdc0291624c187073edbe6280f4d0644d00e
+MISC ChangeLog 888 RMD160 627de37cbf6abd8457c9d935046b04dc01543d00 SHA1 5c48defc3da3f2e92ed8366f625829eccf55e771 SHA256 5905785225c0628602e087c6ff1708009f9e5a7f0484609678470a1778bebf08
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
